--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -858,10 +858,10 @@ body[data-layout="horizontal"][data-layout-size="boxed"] .container-fluid, body[
 
 /*!
  * Waves v0.7.6
- * http://fian.my.id/Waves 
- * 
- * Copyright 2014-2018 Alfiana E. Sibuea and other contributors 
- * Released under the MIT license 
+ * http://fian.my.id/Waves
+ *
+ * Copyright 2014-2018 Alfiana E. Sibuea and other contributors
+ * Released under the MIT license
  * https://github.com/fians/Waves/blob/master/LICENSE */
 .waves-effect {
   position: relative;
@@ -2329,8 +2329,7 @@ div.dt-button-info {
 
 @media (max-width: 767.98px) {
   li.paginate_button.previous, li.paginate_button.next {
-    display: inline-block;
-    font-size: 1.5rem; }
+    display: inline-block;}
   li.paginate_button {
     display: none; }
   .dataTables_paginate ul {
